# cuda-rt-hook

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  License  MANIFEST.in  PltHook.cmake  README.md  README_en.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  clang-format-check.yml  python-publish.yml
cmake/: FindOptions.cmake
docs/tutorial/: README.md  hook.cpp  hook.h  hook_marcos.h  main.cpp
docs/tutorial/lib/include/: hello.h
docs/tutorial/lib/src/: hello.cpp
docs/tutorial/mocklib/include/: hello.h
docs/tutorial/mocklib/src/: hello.cpp
hook_demo/: Makefile  bar.cc  foo.cc  main.cc
hook_demo/python_load/: Makefile  main.cc  pytorch.py  xblas.cc  xdnn_pytorch.cc  xpu_kernel.cc
include/: GlobalVarMgr.h  backtrace.h  cuda_mock.h  cuda_types.h  elf_parser.h  env_mgr.h  env_util.h  hook.h  hook_context.h  macro.h  support.h  util.h  xpu_mock.h
include/logger/: StringRef.h  logger.h  logger_stl.h
include/profile/: Timer.h
lib/: CMakeLists.txt  GlobalVarMgr.cpp  any_hook.cpp  backtrace.cpp  backtrace.h  cuda_mock.cpp  cuda_op_tracer.cpp  cuda_op_tracer.h  cuda_types.h  elf_parser.cpp  env_mgr.cpp  env_util.cpp  hook.cpp  hook_context.cpp  internal.h  logger.cpp  logger.h  statistic.cpp  statistic.h  triton_mock.cpp  util.cpp  xpu_mock.cpp  xpu_mock_improve.cpp
lib/hooks/: print_hook.cpp  print_hook.h  skip_kernel_hook.cpp
python/: CMakeLists.txt
script/: build-wheels.sh  build.sh  format-check.sh  publish-build-wheels.sh
src/: CMakeLists.txt  cuda_mock_impl.cpp
src/cuda_mock/: __init__.py  ctypes_helper.py  cuda_mock_impl.py  dynamic_obj.py  gpu_validation.py  triton_mock.py
test/: string_ring_buffer.cpp  test_capture_backtrace.py  test_hook.cpp  test_hook_strlen.cnn  test_import_mock.py  test_logger.cpp  test_support.cpp
test/cpp_test/: mock_api_test.cpp  string_ring_buffer.cpp  test_backtrace.cpp  test_elf_parser.cpp  test_hook.cpp  test_logger_base.cpp  test_logger_perf.cpp  test_support.cpp  test_utils.cpp
test/cpp_test/mock_api/: CMakeLists.txt  mock_api.cpp  mock_api.h
test/py_test/: test_capture_backtrace.py  test_hook_strlen.cxx  test_import_mock.py  test_xpu_hook.py  xpu_libs.cxx
tools/: nvcc  parse_backtrace.py
