[project]
name = "cuda-mock"
version = "0.0.2"
description = "mock cuda runtime api"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "lipracer", email = "lipracer@gmail.com" },
]
license = { text = "BSD-3-Clause" }

[project.urls]
Homepage = "https://github.com/lipracer/torch-cuda-mock"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[build-system]
requires = ["setuptools>=42", "wheel", "scikit-build", "cmake>=3.17", "ninja"]
build-backend = "setuptools.build_meta"
