[project]
name = "cuda-mock"
version = "0.0.6"
description = "mock cuda runtime api"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "lipracer", email = "lipracer@gmail.com" },
]
license = { text = "BSD-3-Clause" }

[build-system]
requires = ["setuptools>=52", "wheel", "scikit-build", "cmake>=3.17", "ninja"]
build-backend = "setuptools.build_meta"
