[project]
name = "cuda-mock"
version = "0.1.9"
description = "mock cuda runtime api"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "lipracer", email = "lipracer@gmail.com" },
]
license = { text = "BSD-3-Clause" }

[build-system]
requires = ["wheel", "scikit-build", "cmake", "ninja"]
build-backend = "setuptools.build_meta"
